Deployment/k8s/ingress/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx

  rules:
   - host: ecommerce.local
     http:
        paths:
          # Angular client
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-client
                port:
                  number: 80

          # Gateway
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway-api
                port:
                  number: 80
